--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
 
     <main>
         <h2>Get in Touch</h2>
-        <p>Email us at: support@communicationapp.com</p>
-        <p>Call us at: +86 123-4567-890</p>
+        <p>Email us at: ***support@***.com</p>
+        <p>Call us at:***</p>
     </main>
 
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
 
     <footer>
         <p>&copy; 2025 Communication App. All rights reserved.</p>
