--- a/practice.html
+++ b/practice.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Introduction</a></li>
                 <li><a href="practice.html">Situational Practice</a></li>
-                <li><a href="resources.html">Survey (Learning Resources)</a></li>
+                <li><a href="resources.html">Learning Resources</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
