--- a/nvc.html
+++ b/nvc.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NVC - Nonviolent Communication</title>
+    <style>
+        /* CSS STYLES (For consistent appearance) */
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; background-color: #f4f4f9; }
+        header { background: #333; color: white; padding: 10px 0; text-align: center; }
+        header nav ul { list-style: none; padding: 0; }
+        header nav ul li { display: inline; margin: 0 10px; }
+        header nav ul li a { color: white; text-decoration: none; }
+        main { padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        h2 { border-bottom: 2px solid #ccc; padding-bottom: 5px; margin-top: 20px; }
+        #nvc-details { margin-bottom: 30px; }
+        #nvc-details ul { list-style: disc; margin-left: 20px; padding-left: 0; }
+        #related-resources { margin-top: 30px; padding-top: 15px; border-top: 1px solid #eee; text-align: center; }
+        #related-resources nav ul { list-style: none; padding: 0; margin-top: 10px;}
+        #related-resources nav ul li { display: inline; margin: 0 10px; }
+        #related-resources a { color: #007bff; text-decoration: none; font-weight: bold; }
+        footer { text-align: center; padding: 10px; margin-top: 20px; border-top: 1px solid #ccc; color: #777; }
+        figure { text-align: center; margin-top: 20px; }
+        figure img { max-width: 250px; height: auto; border-radius: 5px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); }
+    </style>
 </head>
 <body>
     <header>
@@ -11,7 +30,7 @@
         <nav aria-label="Primary Navigation">
             <ul>
                 <li><a href="index.html">Introduction</a></li>
-                <li><a href="practice.html">Situational Practice</a></li>
+                <li><a href="chapter1.html">Situational Practice</a></li>
                 <li><a href="resources.html">Learning Resources</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
