--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
+    <style>
+        /* CSS STYLES (For consistent appearance) */
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; background-color: #f4f4f9; }
+        header { background: #333; color: white; padding: 10px 0; text-align: center; }
+        header nav ul { list-style: none; padding: 0; }
+        header nav ul li { display: inline; margin: 0 10px; }
+        header nav ul li a { color: white; text-decoration: none; }
+        main { 
+            padding: 40px 20px; 
+            background: white; 
+            border-radius: 8px; 
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+            min-height: 70vh;
+            text-align: center;
+        }
+        h2 { 
+            color: #333; 
+            margin-bottom: 20px;
+        }
+        .contact-info {
+            font-size: 1.1em;
+            margin: 10px auto;
+            max-width: 400px;
+            padding: 15px;
+            border: 1px dashed #ccc;
+            border-radius: 5px;
+        }
+        footer { text-align: center; padding: 10px; margin-top: 20px; border-top: 1px solid #ccc; color: #777; }
+    </style>
 </head>
 <body>
     <header>
@@ -11,22 +40,29 @@
         <nav aria-label="Primary Navigation">
             <ul>
                 <li><a href="index.html">Introduction</a></li>
-                <li><a href="practice.html">Situational Practice</a></li>
+                <!-- FIX APPLIED HERE: Changed 'practice.html' to 'chapter1.html' -->
+                <li><a href="chapter1.html">Situational Practice</a></li>
                 <li><a href="resources.html">Learning Resources</a></li>
                 <li><a href="contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
 
-    <br><br><br><br><br><br><br>
+    <br><br><br>
 
     <main>
         <h2>Get in Touch</h2>
-        <p>Email us at: ***support@***.com</p>
-        <p>Call us at:***</p>
+        
+        <div class="contact-info">
+            <p>If you have any feedback or require support, please use the following methods:</p>
+            <br>
+            <p>Email us at: <strong>support@app.com</strong></p>
+            <p>Call us at: <strong>(555) 123-4567</strong></p>
+        </div>
+        
     </main>
 
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br>
 
     <footer>
         <p>&copy; 2025 Communication App. All rights reserved.</p>
