--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,9 @@
         header { background: #333; color: white; padding: 10px 0; text-align: center; }
         header nav ul { list-style: none; padding: 0; }
         header nav ul li { display: inline; margin: 0 10px; }
-        header nav ul li a { color: white; text-decoration: none; }
+        header nav ul li a { color: white; text-decoration: none; 
+            /*Add mouse hover effect*/
+            transition: color 0.3s ease; }
         main { 
             padding: 40px 20px; 
             background: white; 
@@ -32,6 +34,11 @@
             border-radius: 5px;
         }
         footer { text-align: center; padding: 10px; margin-top: 20px; border-top: 1px solid #ccc; color: #777; }
+
+        /*Add the color for mouse hover.*/
+        header nav ul li a:hover {
+            color:#4CAF50
+        }
     </style>
 </head>
 <body>
