--- a/resources.html
+++ b/resources.html
@@ -10,7 +10,9 @@
         header { background: #333; color: white; padding: 10px 0; text-align: center; }
         header nav ul { list-style: none; padding: 0; }
         header nav ul li { display: inline; margin: 0 10px; }
-        header nav ul li a { color: white; text-decoration: none; }
+        header nav ul li a { color: white; text-decoration: none; 
+            /*Add mouse hover effect*/
+            transition: color 0.3s ease;}
         footer { text-align: center; padding: 10px; margin-top: 20px; border-top: 1px solid #ccc; color: #777; }
 
         main { padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); min-height: 70vh; }
@@ -52,6 +54,11 @@
             border-radius: 3px;
             font-size: 0.8em;
             margin-bottom: 10px;
+        }
+
+        /*Add the color for mouse hover.*/
+        header nav ul li a:hover {
+            color:#4CAF50
         }
     </style>
 </head>
